overflow fix

--- a/navbar/style/Navbar.scss
+++ b/navbar/style/Navbar.scss
@@ -3,6 +3,7 @@
 body {
     margin: 0;
     font-family: 'Josefin Sans', Helvetica, sans-serif;
+    overflow: hidden;
 }
 
 main{
